--- a/locale/es.toml
+++ b/locale/es.toml
@@ -1,4 +1,4 @@
-"action.name" = "Ver variables de script"
+"action.title" = "Ver variables de script"
 "ui.header0" = "Variable"
 "ui.header1" = "Valor"
 "ui.section_file" = "Variables de archivo"
