--- a/locale/fr.toml
+++ b/locale/fr.toml
@@ -1,4 +1,4 @@
-"action.name" = "Afficher les variables du script"
+"action.title" = "Afficher les variables du script"
 "ui.header0" = "Variable"
 "ui.header1" = "Valeur"
 "ui.section_file" = "Variables de fichier"
