--- a/locale/en.toml
+++ b/locale/en.toml
@@ -1,4 +1,6 @@
 "action.title" = "View script variables"
+"ui.details.window.title.multi" = "%{tag_name}% values"
+"ui.details.window.title.single" = "%{tag_name}% value"
 "ui.header0" = "Variable"
 "ui.header1" = "Value"
 "ui.section_file" = "File variables"
@@ -7,3 +9,5 @@
 "ui.title_file" = "File: %s"
 "ui.title_track" = "Track: %s %s"
 "ui.title_variables" = "Variables"
+"ui.tooltip" = "Double-click for details"
+"ui.type_error" = "Unknown value type."
